--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/ravisingh007ravi/internshipGroup8#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^6.7.2"
+    "mongoose": "^6.7.2",
+    "valid-url": "^1.0.9"
   }
 }
